--- a/package.json
+++ b/package.json
@@ -1,23 +1,31 @@
 {
     "private": true,
     "scripts": {
-        "dev": "vite",
-        "build": "vite build"
+        "dev": "npm run development",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "prod": "npm run production",
+        "production": "mix --production"
     },
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
-        "@vitejs/plugin-vue": "^3.0.1",
-        "axios": "^0.27",
+        "@vue/compiler-sfc": "^3.2.33",
+        "axios": "^0.25",
         "bootstrap": "^5.1.3",
-        "laravel-vite-plugin": "^0.6.0",
+        "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
+        "resolve-url-loader": "^5.0.0",
         "sass": "^1.32.11",
-        "vite": "^3.0.0",
-        "vue": "^3.2.37"
+        "sass-loader": "^11.0.1",
+        "vue-loader": "^17.0.0"
     },
     "dependencies": {
-        "vue-axios": "^3.4.1",
-        "vue-router": "^4.1.5"
+        "autoprefixer": "10.4.5",
+        "laravel-vue-pagination": "^3.0.0",
+        "vue": "^3.2.33",
+        "vue-router": "^4.0.13"
     }
 }
